@@ -1,4 +1,8 @@
 2002-02-09  Ryan Nunn  <triforce@merlin.net.au>
+	* usecode/intrinsics.cc, usecode/siintrinsics.h, usecode/ucinternal.h :
+	  Fixed skin colour problem in sex scenes.
+
+2002-02-09  Ryan Nunn  <triforce@merlin.net.au>
 	* game.cc : Namespace stuff
 	* gamemap.cc : Compiling error
 	* msvcstuff/msvc_kludges.h : Headers dir
